[gd_scene load_steps=18 format=3 uid="uid://hvhc1se8n78j"]

[ext_resource type="Script" uid="uid://f6paob8dsqvt" path="res://enemies/Spitter/spitter.gd" id="1_o4d81"]
[ext_resource type="Script" uid="uid://dr8bvnfebp76" path="res://addons/health_hitbox_hurtbox/health/health.gd" id="2_fdpw6"]
[ext_resource type="PackedScene" uid="uid://bfvvc1f6rf8gv" path="res://components/HealthBar/HealthBar.tscn" id="3_sef37"]
[ext_resource type="Script" uid="uid://dtfoilkdcfvgv" path="res://addons/health_hitbox_hurtbox/2d/hurt_box_2d/basic_hurt_box_2d.gd" id="4_ie3dq"]
[ext_resource type="Script" uid="uid://cobp4qehnuq77" path="res://addons/health_hitbox_hurtbox/resources/modifier.gd" id="5_r7ge4"]
[ext_resource type="Texture2D" uid="uid://bom7qa6mjcy57" path="res://enemies/Spitter/spit/01 Spucki_00000.png" id="6_eyp17"]
[ext_resource type="Texture2D" uid="uid://csvfdp7ai0ow6" path="res://enemies/Spitter/spit/01 Spucki_00001.png" id="7_eji7b"]
[ext_resource type="Texture2D" uid="uid://dyq3203wlcgeo" path="res://enemies/Spitter/spit/01 Spucki_00002.png" id="8_g1hkq"]
[ext_resource type="Texture2D" uid="uid://bra02lvhpmot5" path="res://enemies/Spitter/spit/01 Spucki_00003.png" id="9_lb66b"]
[ext_resource type="Texture2D" uid="uid://1tdi2yhst4i5" path="res://enemies/Spitter/spit/01 Spucki_00004.png" id="10_0k6li"]
[ext_resource type="Texture2D" uid="uid://de2iw0wimsiqw" path="res://enemies/Spitter/spit/01 Spucki_00005.png" id="11_ka1g5"]
[ext_resource type="Texture2D" uid="uid://y5n1nmselnns" path="res://enemies/Spitter/spit/01 Spucki_00006.png" id="12_ku4a0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdpw6"]
size = Vector2(50, 50)

[sub_resource type="Resource" id="Resource_fdpw6"]
script = ExtResource("5_r7ge4")
incrementer = 0
multiplier = 1.0
convert_affect = 0
convert_type = 0

[sub_resource type="Resource" id="Resource_sef37"]
script = ExtResource("5_r7ge4")
incrementer = 0
multiplier = 1.0
convert_affect = 0
convert_type = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrlf0"]
size = Vector2(70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdpw6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_eyp17")
}, {
"duration": 1.0,
"texture": ExtResource("7_eji7b")
}, {
"duration": 1.0,
"texture": ExtResource("8_g1hkq")
}, {
"duration": 1.0,
"texture": ExtResource("9_lb66b")
}, {
"duration": 1.0,
"texture": ExtResource("10_0k6li")
}, {
"duration": 1.0,
"texture": ExtResource("11_ka1g5")
}, {
"duration": 1.0,
"texture": ExtResource("12_ku4a0")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Spitter" type="CharacterBody2D"]
collision_layer = 256
script = ExtResource("1_o4d81")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_fdpw6")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_fdpw6")
current = 5
max = 5
metadata/_custom_type_script = "uid://dr8bvnfebp76"

[node name="HealthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("3_sef37")]
offset_top = -52.0
offset_bottom = -42.0
health = NodePath("../Health")

[node name="BasicHurtBox2D" type="Area2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(0, 35)
script = ExtResource("4_ie3dq")
health = NodePath("../Health")
modifiers = Dictionary[int, ExtResource("5_r7ge4")]({
1: SubResource("Resource_fdpw6"),
2: SubResource("Resource_sef37")
})
metadata/_custom_type_script = "uid://dtfoilkdcfvgv"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BasicHurtBox2D"]
position = Vector2(0, -35)
shape = SubResource("RectangleShape2D_xrlf0")

[node name="cooldown_timer" type="Timer" parent="."]

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fdpw6")
offset = Vector2(36, -18.105)

[connection signal="damaged" from="Health" to="." method="_on_health_damaged"]
[connection signal="died" from="Health" to="." method="_on_health_died"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
